--- a/.github/workflows/test-nextstrain-auspice-install.yml
+++ b/.github/workflows/test-nextstrain-auspice-install.yml
@@ -7,6 +7,9 @@ jobs:
         uses: actions/checkout@v3
         with:
           repository: nextstrain/nextstrain.org
+      - uses: actions/setup-node@v2
+        with:
+          node-version: '14'
       - run: npm ci
       - run: npm install nextstrain/auspice#d3d184519e0307dfbf1be398d8025255bc4918a3
   npm-install-clone:
@@ -16,6 +19,9 @@ jobs:
         uses: actions/checkout@v3
         with:
           repository: nextstrain/nextstrain.org
+      - uses: actions/setup-node@v2
+        with:
+          node-version: '14'
       - run: npm ci
       - name: Checkout auspice
         uses: actions/checkout@v3
