allow all matrix jobs to finish

--- a/.github/workflows/test-nextstrain-auspice-install.yml
+++ b/.github/workflows/test-nextstrain-auspice-install.yml
@@ -3,6 +3,7 @@ jobs:
   npm-install-github:
     runs-on: ubuntu-latest
     strategy:
+      fail-fast: false
       matrix:
         node: [14, 16]
     steps:
@@ -19,6 +20,7 @@ jobs:
   npm-install-clone:
     runs-on: ubuntu-latest
     strategy:
+      fail-fast: false
       matrix:
         node: [14, 16]
     steps:
