--- a/.github/workflows/test-nextstrain-auspice-install.yml
+++ b/.github/workflows/test-nextstrain-auspice-install.yml
@@ -23,24 +23,27 @@ jobs:
       fail-fast: false
       matrix:
         node: [14, 16]
+    env:
+      AUSPICE_REPO_DIR: auspice
+      NEXTSTRAIN_ORG_REPO_DIR: nextstrain.org
     steps:
       - name: Checkout nextstrain.org
         uses: actions/checkout@v3
         with:
           repository: nextstrain/nextstrain.org
+          path: ${{ env.NEXTSTRAIN_ORG_REPO_DIR }}
       - uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node }}
       - run: npm ci
+        working-directory: ${{ env.NEXTSTRAIN_ORG_REPO_DIR }}
       - name: Checkout auspice
         uses: actions/checkout@v3
         with:
-          path: auspice
+          path: ${{ env.AUSPICE_REPO_DIR }}
           repository: nextstrain/auspice
           ref: d3d184519e0307dfbf1be398d8025255bc4918a3
-      - run: cd auspice && npm ci
-      # Fix "checkPermissions Missing write access to …"
-      - if: matrix.node == 14
-        run: sudo chown -R $USER:$USER auspice/node_modules/
-      - run: npm install $GITHUB_WORKSPACE/auspice
+      - run: cd ${{ env.AUSPICE_REPO_DIR }} && npm ci
+      - run: npm install $GITHUB_WORKSPACE/$AUSPICE_REPO_DIR
+        working-directory: ${{ env.NEXTSTRAIN_ORG_REPO_DIR }}
       - run: cat package.json | jq '.dependencies.auspice'
