--- a/.github/workflows/debug-nextstrain-cli-249.yml
+++ b/.github/workflows/debug-nextstrain-cli-249.yml
@@ -16,14 +16,13 @@ jobs:
     steps:
       - uses: conda-incubator/setup-miniconda@v2
         with:
-          python-version: ${{ matrix.python }}
           activate-environment: test
 
       - run: |
           conda install -n base conda-libmamba-solver
           conda config --set solver libmamba
 
-      - run: conda install -c bioconda -c conda-forge augur auspice snakemake
+      - run: conda install -c bioconda -c conda-forge augur auspice snakemake python=${{ matrix.python }}
         shell: bash -l -eo pipefail {0}
 
       - run: conda info
